<resources>
    <string name="app_name">Startup</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Logout</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="authenticate_fingerprint">Error authenticating fingerprint</string>
    <string name="auth_successful">Fingerprint authentication successful</string>
    <string name="Unknown_permission_request">Unrecognized permission request</string>
    <string name="permission_refused">" User refused Fingerprint permission"</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="address_hint">Address</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="login_now">LOGIN</string>
    <string name="title_activity_account">Account</string>
    <string name="preferences_country">Country</string>
    <string name="preferences_state_province">State</string>
    <string name="preferences_city">city</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Contact us</string>
    <string name="title_activity_navi">Navi</string>
    <string name="title_activity_navigator">Startup</string>
    <string name="node_users">users</string>

    <string name="node_posts">posts</string>
    <string name="postId">post id</string>

    <string name="dialog_select_photo">SelectPhoto</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or again sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="mob">Mobile Number</string>
    <string name="Gender">Gender</string>
    <string name="city">City</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>


</resources>
